<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:weightSum="1" >
        
        <TextView
	        android:id="@+id/tv_location"
	        android:layout_width="match_parent"
	        android:layout_weight="0.05" 
	        android:layout_height="wrap_content"/>
        
        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.90"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:orientation="vertical" >
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2" >
                <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                        
						<Button android:id="@+id/buttonStart" 
		                	android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:text="@string/btn_start"
		                    android:onClick="onClickStart"/>
		             
		            	<Button android:id="@+id/buttonStop" 
		                	android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:text="@string/btn_stop"
		                    
		                    android:onClick="onClickStop"/>
		            
		            	<Button android:id="@+id/buttonCheckin" 
		                	android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:text="@string/btn_checkin"
		                    android:onClick="onClick"/> 
                    </TableRow>
            </TableLayout>
            
            <!-- 
            <ToggleButton android:id="@+id/buttonOnOff"
                	android:layout_weight="0.5"
                          android:layout_width="fill_parent" 
                          android:layout_height="wrap_content"
                          android:textOn="@string/btn_stop_logging" 
                          android:textOff="@string/btn_start_logging"
                          />
            
             <Button android:id="@+id/buttonStart" 
                	android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_start"
                    android:layout_weight="0.33"
                    android:onClick="onClick"/>
             
            <Button android:id="@+id/buttonStop" 
                	android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_stop"
                    android:layout_weight="0.33"
                    android:onClick="onClick"/>
            
            <Button android:id="@+id/buttonCheckin" 
                	android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_checkin"
                    android:layout_weight="0.33"
                    android:onClick="onClick"/> 
                    -->
        
		</LinearLayout>
        
    </LinearLayout>
